Bug 405945 - [Wayland] Zoom adjustment with a touch screen is slower than with the slider in status bar
Summary: [Wayland] Zoom adjustment with a touch screen is slower than with the slider ...
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: Other (add details in bug description)
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-27 22:21 UTC by Patrick Silva
Modified: 2020-05-26 21:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-03-27 22:21:27 UTC
STEPS TO REPRODUCE
1. open a file with gwenview
2. do pinch gesture using a touchscreen to adjust the zoom level
3. 

OBSERVED RESULT
zoom adjustment is not smooth, sometimes gwenview takes ~1 second to apply it.

EXPECTED RESULT
smooth zoom adjustment

SOFTWARE/OS VERSIONS
gwenview 19.07.70
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.0
 

ADDITIONAL INFORMATION
zoom adjustment works well when I use the slider in the status bar.
Comment 1 Nate Graham 2019-04-01 17:45:15 UTC
It's nice and smooth on my machine (Late 2016 HP Spectre x360). Unfortunately this is probably going to be irresolvable without physical access to the hardware in question. :( What hardware are you using?
Comment 2 Patrick Silva 2019-04-01 18:07:00 UTC
lenovo laptop g400s touch
Comment 3 Nate Graham 2019-04-01 18:35:22 UTC
Any chance you could take a video of yourself (well, your fingers) interacting with the screen so I can get a sense of the lag?
Comment 4 Patrick Silva 2019-04-03 23:14:29 UTC
Here is the video.
The problem only occurs on Wayland.

https://www.youtube.com/watch?v=jJWvHenL3mc
Comment 5 Nate Graham 2019-04-05 14:58:38 UTC
Thanks for the video, and thanks for the extra information that it only happens on Wayland.
Comment 6 Patrick Silva 2019-07-02 03:04:04 UTC
Operating System: KaOS (2019) 
KDE Plasma Version: 5.16.2
KDE Frameworks Version: 5.59.0
Qt Version: 5.13.0
Comment 7 Nate Graham 2020-05-26 18:17:52 UTC
Git commit ac30df57e308fabd2517cdd18691ada7ca108190 by Nate Graham, on behalf of Steffen Hartleib.
Committed on 26/05/2020 at 18:17.
Pushed by ngraham into branch 'master'.

fix lagging zoom with touch in wayland

add a dynamically adjusted minimum wait time between two zoom events,
to reduce lag if you are zooming with touch.

M  +1    -0    app/main.cpp
M  +22   -3    lib/documentview/documentview.cpp
M  +2    -2    lib/documentview/documentview.h
M  +11   -3    lib/touch/touch.cpp
M  +2    -2    lib/touch/touch.h

https://invent.kde.org/graphics/gwenview/commit/ac30df57e308fabd2517cdd18691ada7ca108190
Comment 8 Patrick Silva 2020-05-26 21:49:42 UTC
I have built master branch on neon unstable, now this bug is really fixed.
Thank you very much Steffen Hartleib. :)