fix lagging zoom with touch in wayland

add a dynamically adjusted minimum wait time between two zoom events,
to reduce lag if you are zooming with touch.

BUG: 405945