app/main.cpp
@@ -124,6 +124,7 @@ int main(int argc, char *argv[])
      */
     QCoreApplication::setAttribute(Qt::AA_UseHighDpiPixmaps, true);
     QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling, true);
+    QCoreApplication::setAttribute(Qt::AA_CompressHighFrequencyEvents, true);
 
     QApplication app(argc, argv);
     KLocalizedString::setApplicationDomain("gwenview");
